[package]
name = "rustlox"
version = "0.1.0"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
eyre = "0.6.8"
enum-map = "2.4.1"
lazy_static = "1.4.0"
chrono = "0.4.22"
